# node-eosjs-signature-provider

./: .gitignore  .gitmodules  .travis.yml  README.md  package-lock.json  package.json  tsconfig.json
src/: index.ts
src/cpp/: CMakeLists.txt  node_eos_signature_provider.cpp
src/cpp/lib/fc/CMakeModules/: FindGMP.cmake
